--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -128,6 +128,7 @@ header nav a {
 .categories section button {
   width: 150px;
   height: 30px;
+  border: 2px solid black ;
   border-radius: 5px;
   background-color: white;
 }
